force-app/main/default/objects/TableauDashboardAssignment__c/TableauDashboardAssignment__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TableauDashboardAssignment</label>
</CustomObject>