force-app/main/default/objects/TableauDashboardAssignment__c/fields/At_Risk_URL__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>At Risk URL</label>
    <type>Url</type>
</CustomField>