force-app/main/default/objects/TableauDashboardAssignment__c/fields/Tableau_URL__c.field-meta.xml
<CustomField>
    <fullName>Tableau_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tableau URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>