force-app/main/default/objects/TableauDashboardAssignment__c/fields/Top20Bottom20URL__c.field-meta.xml
<CustomField>
    <fullName>Top20Bottom20URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Top20Bottom20URL</label>
    <type>Url</type>
</CustomField>